--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,6 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -39,10 +16,14 @@ body {
   padding: 10px;
   transition: 0.6s;
 }
+.single-product{
+  border-radius: 10px;
+  border: 1px solid rgb(0, 0, 0);
+}
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid rgb(248, 50, 215);
 }
 .product-image {
   width: 150px;
@@ -54,6 +35,7 @@ body {
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
+  border: 1px solid rgb(75, 74, 74);
   margin-right: 30px;
   position: fixed;
 }
