--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ body {
   transition: 0.3s;
 }
 .single-product{
-  background-color:rgb(243, 242, 242);
+  background-color:rgb(249, 249, 255);
   border-radius: 10px;
   border: 2px solid rgb(204, 203, 203);
 }
 .single-product:hover {
-  background-color:ivory;
+  background-color:rgb(253, 253, 246);
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
   border: 2px solid rgb(0, 0, 0);
@@ -30,7 +30,13 @@ body {
   width: 150px;
   height: 150px;
 }
+.title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .cart {
+  background-color:rgb(245, 255, 255);
   width: 350px;
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
@@ -78,7 +84,7 @@ body {
   font-weight: bold;
 }
 .btn-details{
-  background-color: #f5f3f0;
+  background-color: #e7e3dc;
   color: bla;
   padding: 8px;
   border-radius: 5px;
